--- a/.github/workflows/language-test.yml
+++ b/.github/workflows/language-test.yml
@@ -110,14 +110,21 @@ jobs:
           # Install requirements.txt
           ./bin/build.sh install_deps ${{ inputs.python-version }}
           # Install any custom package versions
-          declare -a arr=("howso-watermarker-py" "howso-validator-enterprise-py" "howso-validator-py" "howso-synthesizer-py" "howso-engine-py" "amalgam-lang-py")
-          for repo in "${arr[@]}"; do
-            if [ -d "$repo" ]; then
+          echo "Installing custom packages..."
+          while read -r repo; do
+            set +e
+            repo=$(echo "$repo" | tr -d '\r')  # Remove carriage return
+            echo "Analyzing $repo for installable .whl files..."
+            count=`ls -1 $repo/*.whl 2>/dev/null | wc -l`
+            ls $repo
+            echo "Found count: $count"
+            if [[ $count != 0 && "$count" != "" ]]; then
               echo "Found custom $repo version; installing..."
               pip uninstall ${repo%-py} -y
-              pip install $repo/*.whl
+              pip install $repo/*.whl --no-deps
             fi
-          done
+            set -e
+          done < <(printf "%s" '${{ inputs.upstream-details }}' | jq -rc 'keys[]')
           # The below may fail if there are no howso-branded packages installed, i.e., in the case of howso-run-py
           pip list | grep amalgam || true
           pip list | grep howso || true
