--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -451,3 +451,23 @@ jobs:
         with:
           name: "traces-${{ inputs.platform-pretty }}-${{ inputs.python-version }}-${{ inputs.config-pretty }}"
           path: ${{ inputs.traces-fp }}
+
+      - name: Create environment repro script
+        continue-on-error: true
+        run: |
+          # Download the setup.sh script template
+          wget https://github.com/howsoai/.github/blob/main/workflow-templates/env-repro/setup.sh
+          # Get current Python version
+          python_version=$(python --version 2>&1 | awk '{print $2}')
+          # Fill in the Python version preset
+          sed -i "s|{PYTHON_VERSION}|$python_version|g" setup.sh
+          # Fill in the upstream-details template
+          sed -i "s|{UPSTREAM_DETAILS}|${{ inputs.upstream-details }}|g" setup.sh
+
+      - name: Upload environmnt repro script
+        if: always()
+        continue-on-error: true
+        uses: actions/upload-artifact@v4
+        with:
+          name: "env-repro-Python-${{ inputs.python-version }}"
+          path: ./setup.sh
