--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -458,8 +458,8 @@ jobs:
         if: always()
         continue-on-error: true
         run: |
-          # Download the setup.sh script template
-          wget https://github.com/howsoai/.github/blob/main/workflow-templates/env-repro/setup.sh
+          # Download the setup.sh template
+          curl -L -o setup.sh https://github.com/howsoai/.github/blob/main/workflow-templates/env-repro/setup.sh
 
           # Get current Python version
           python_version=$(python --version 2>&1 | awk '{print $2}')
@@ -471,11 +471,22 @@ jobs:
           HOWSO_CONFIG_PATH_ESCAPED=$(echo '${{ inputs.config-fp }}' | jq -R '@json' | sed 's/[&/\]/\\&/g')
 
           # Replace the Python version preset
-          sed -i "s|{PYTHON_VERSION}|$PYTHON_VERSION_ESCAPED|g" setup.sh
-          # Replace the upstream-details template
-          sed -i "s|{UPSTREAM_DETAILS}|$UPSTREAM_DETAILS_ESCAPED|g" setup.sh
-          # Replace the Howso config path
-          sed -i "s|{HOWSO_CONFIG_PATH}|$HOWSO_CONFIG_PATH_ESCAPED|g" setup.sh
+          # MacOS and Linux have different implementations
+          
+          if [[ "${{ inputs.platform-pretty }}" == "MacOS" ]]; then
+            sed -i '' "s|{PYTHON_VERSION}|$PYTHON_VERSION_ESCAPED|g" setup.sh
+            # Replace the upstream-details template
+            sed -i '' "s|{UPSTREAM_DETAILS}|$UPSTREAM_DETAILS_ESCAPED|g" setup.sh
+            # Replace the Howso config path
+            sed -i '' "s|{HOWSO_CONFIG_PATH}|$HOWSO_CONFIG_PATH_ESCAPED|g" setup.sh
+          else
+            # Linux/Windows
+            sed -i "s|{PYTHON_VERSION}|$PYTHON_VERSION_ESCAPED|g" setup.sh
+            # Replace the upstream-details template
+            sed -i "s|{UPSTREAM_DETAILS}|$UPSTREAM_DETAILS_ESCAPED|g" setup.sh
+            # Replace the Howso config path
+            sed -i "s|{HOWSO_CONFIG_PATH}|$HOWSO_CONFIG_PATH_ESCAPED|g" setup.sh
+          fi
 
       - name: Upload environment repro script
         if: steps.create-script.outputs.exists != true && always()
