--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -264,6 +264,9 @@ jobs:
           # Upgrade Pip to latest version
           python -m pip install --upgrade pip
 
+          pip install setuptools<78.0.0
+          pip list | grep setuptools || true
+
           # Set Pip extra index URL
           if [[ -n "${{ secrets.JFROG_ACCESS_TOKEN }}" ]]; then
             export PIP_EXTRA_INDEX_URL=https://vsts-build@diveplane.com:${{ secrets.JFROG_ACCESS_TOKEN }}@dpbuild.jfrog.io/artifactory/api/pypi/pypi-edge/simple
