--- a/.github/workflows/workflow-summary.yml
+++ b/.github/workflows/workflow-summary.yml
@@ -52,7 +52,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
         run: |
-          pip install "setuptools<78.0.0"
+
           while read -r repo; do
             echo "Getting details for $repo"
             run_type=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "$repo" '.[$repo]."run_type"')
@@ -73,6 +73,9 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
         run: |
+          # Setuptools 78.0.1 has broken many dependencies without an older pinned version
+          echo "setuptools<78" > constraint.txt
+          export PIP_CONSTRAINT=constraint.txt
           if [[ ! -e "./.github/templates/version_summary.md" ]]; then
             echo "No workflow summary template found!"
             exit 0
