--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -264,8 +264,9 @@ jobs:
           # Upgrade Pip to latest version
           python -m pip install --upgrade pip
 
-          pip install "setuptools<78.0.0"
-          pip list | grep setuptools || true
+          # Setuptools 78.0.1 has broken many dependencies without an older pinned version
+          echo "setuptools<78" > constraint.txt
+          export PIP_CONSTRAINT=constraint.txt
 
           # Set Pip extra index URL
           if [[ -n "${{ secrets.JFROG_ACCESS_TOKEN }}" ]]; then
