--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -269,6 +269,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+          # Sometimes, the location of downloaded binaries via Pip may not in the path already
+          echo "~/Library/Python/${{ inputs.python-version }}/bin" >> $GITHUB_PATH
+          echo "~/.local/bin" >> $GITHUB_PATH
           # Upgrade Pip to latest version
           python -m pip install --upgrade pip
           # Set Pip extra index URL
@@ -404,6 +407,9 @@ jobs:
 
           # Run ruff if requested
           if [[ "${{ inputs.enable-ruff }}" == "true" ]]; then
+            # Sometimes, the location of downloaded binaries via Pip may not in the path already
+            echo "~/Library/Python/${{ inputs.python-version }}/bin" >> $GITHUB_PATH
+            echo "~/.local/bin" >> $GITHUB_PATH
             ruff check
           fi
 
