--- a/.github/workflows/set-metadata.yml
+++ b/.github/workflows/set-metadata.yml
@@ -33,6 +33,9 @@ on:
       howso-watermarker-py-build:
         required: false
         type: string
+      howso-engine-connectors-py-build:
+        required: false
+        type: string
       allow-version-prefix:
         required: false
         type: boolean
